--- a/sacms/templates/sacms/article.html
+++ b/sacms/templates/sacms/article.html
@@ -1,4 +1,146 @@
-<h1>Title: {{ article.title }}</h1>
-<div>Author: {{ article.author }}</div>
-<div>Published Date: {{ article.pubublished_date  }} </div>
-<div>{{ article.text }}</div>
+{% load static %}
+<!DOCTYPE html>
+<html lang="zh-CN">
+   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>首页</title>
+    <link rel='icon' href='pics/logo.jpg' type='image/x-ico' /> 
+
+    <!-- 新 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="{% static 'sacms/bootstrap.min.css' %}">
+    <!-- 可选的Bootstrap主题文件（一般不用引入） -->
+    <link rel="stylesheet" href="{% static 'sacms/bootstrap-theme.min.css' %}">
+    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+    <script src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+    <script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+    <link href="{% static 'sacms/index.css' %}" rel="stylesheet">
+
+    <link rel="stylesheet" href="{% static 'sacms/bootstrap.min.css' %}">  
+    <script src="{% static 'sacms/js/jquery-2.2.3.min.js' %}"></script>
+    <script src="{% static 'sacms/js/bootstrap.min.js' %}"></script>
+	
+  </head>
+
+  <body>
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <div class="container">
+
+      	
+      	<div class="col-md-2 logo">
+          <img src="{% static 'sacms/logo.jpg' %}" height="130">
+        </div>
+        <div class="col-md-10">
+        	<p class="chn-title"><b>国家重点研发计划——重要热带病传播相关的入侵媒介及其病原体的生物学特性研究</b></p>
+          <div class="row">
+            <div class="col-md-9 eng-title">
+              <p><b>National Research and Development Plan: Research on Biological Characteristics of the Tropical Disease Related Invasion vectors and Pathogens</b><p>
+            </div>
+            <div class="col-md-3 search-box">
+              <div id="custom-search-input">
+                <div class="input-group col-md-12">
+                  <input type="text" class="  search-query form-control" placeholder="搜索" />
+                  <span class="input-group-btn">
+                    <button class="btn btn-danger" type="button">
+                      <span class=" glyphicon glyphicon-search"></span>
+                    </button>
+                  </span>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+ 
+      <div class="container">
+	      <div class="blog-masthead">
+		      <div class="row">
+		      	<div class="col-md-10 col-md-offset-1">
+			        <nav class="blog-nav" >
+			          <a class="blog-nav-item" href="#">首页</a>
+			          <a class="blog-nav-item  active" href="#">新闻动态</a>
+			          <a class="blog-nav-item" href="#">研究团队</a>
+			          <a class="blog-nav-item" href="#">数据分析</a>
+			          <a class="blog-nav-item" href="#">相关资源</a>
+                 <a class="blog-nav-item" href="#" style="float:right">注册/登录</a>
+			        </nav>
+			    	</div>
+			    </div>
+		    </div>
+      </div>   
+
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-2">
+        </div>
+        <div class="col-sm-8 project-introduction">
+        {% if article %}
+          <p class="project-introduction-title">{{ article.title }}</p>
+             <div class="row">
+               <div class="col-sm-7"></div>
+               <div class="col-sm-2"><small class="author">作者：{{ article.author }}</small></div>
+               <div class="col-sm-3"><small class="pubDate">发布日期： {{ article.published_date }}</small></div>
+             </div>
+          <p class="project-introduction-paragraph">
+          {{ article.text }}
+          </p>
+				</div>
+
+        <div class="col-sm-2">
+          
+        </div>
+       {% else %}
+       <p>no article</p>
+       {% endif %}
+      <hr>
+      <footer class="footer">
+        <div class="row">
+          <div class="col-sm-8">
+            <div class="col-sm-7 project-introduction">
+              <p><b>相关链接</b></p>
+              <p><a href="http://zssom.sysu.edu.cn/">中山大学中山医学院</a></p>
+              <p><a href="http://www.ipd.org.cn/">中国疾病预防控制中心寄生虫病预防控制所</a></p>
+              <p><a href="http://life.fudan.edu.cn/ ">复旦大学生命科学学院</a></p>
+              <p><a href="http://www.ipd.org.cn/">南方医科大学公共卫生与热带医学学院</a></p>      
+            </div>
+            <div class="col-sm-5">
+              <p><b>资源共享</b></p>
+              <p><a href="http://www.chinaias.cn/wjPart/index.aspx ">中国外来入侵物种数据库</a></p>
+              <p><a href="http://www.iucngisd.org/gisd/">全球入侵物种数据库GISD</a></p>
+              <p><a href="https://www.vectorbase.org/">人类病原体无脊椎动物媒介生物信息资源数据库（VectorBase）</a></p> 
+            </div>
+          </div>
+          <div class="col-sm-3 col-sm-offset-1">
+            <div class=" QRcode-reminder">
+              <p>请关注我们的公众号：</p>
+            </div>
+            <!-- <div class="col-sm-4"> -->
+              <img src="{% static 'sacms/QRcode.png' %}" height="105">
+            <!-- </div> -->
+          </div>          
+        </div>
+        <div class="col-sm-6 col-sm-offset-3">
+          <p>Copyright &copy; 2016 <a href="http://www.sysu.edu.cn/2012/cn/index.htm">中山大学</a> &nbsp&nbsp&nbsp
+          联系我们：<a href="mailto:wuzhd@mail2.sysu.edu.cn">wuzhd@mail2.sysu.edu.cn</a></p> 
+          <p>地址：中国广州市中山二路74号中山大学北校区（邮政编码：510080）</p>         
+        </div>
+      </footer>
+
+    </div> <!-- /container -->
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+		<script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  </body>
+</html>
