--- a/sacms/templates/sacms/data.html
+++ b/sacms/templates/sacms/data.html
@@ -87,6 +87,7 @@
               <nav class="blog-nav" >
                 <a class="blog-nav-item" href="{% url 'index'%}">首页</a>
                 <a class="blog-nav-item" href="{% url 'newsfeed' %}">新闻动态</a>
+                <a class="blog-nav-item" href="{% url 'meetings' %}">学术交流</a>
                 <a class="blog-nav-item" href="{% url 'groups'%}">研究团队</a>
                 <a class="blog-nav-item active" href="{% url 'data' %}">数据分析</a>
                 <a class="blog-nav-item" href="#">相关资源</a>
@@ -110,8 +111,8 @@
                <ul class="nav nav-list">
                   <li class="divider"></li>
                   <li ><a href="project.html"><i class="icon-white icon-home"></i>数据共享</a></li>
-                  <li class="active"><a href="goal.html"><i class="icon-flag"></i>数据库链接</a></li>
-                  <li><a href="document.html"><i class="icon-folder-open"></i>常用数据分析工具</a></li>
+                  <li class="active"><a href="http://www.drugfuture.com/cndrug/"><i class="icon-flag"></i>数据库链接</a></li>
+                  <li><a href="http://bbs.pinggu.org/thread-2172224-1-1.html"><i class="icon-folder-open"></i>常用数据分析工具</a></li>
                </ul>
               </div>
            </div>
