upload and download

--- a/sacms/templates/sacms/data.html
+++ b/sacms/templates/sacms/data.html
@@ -110,7 +110,8 @@
               <div class="well" style="padding:10px 0;margin-top:20px;">
                <ul class="nav nav-list">
                   <li class="divider"></li>
-                  <li ><a href="project.html"><i class="icon-white icon-home"></i>数据共享</a></li>
+                  <li ><a href="{% url 'upload' %}"><i class="icon-white icon-home"></i>数据上传</a></li>
+                  <li ><a href="{% url 'download' %}"><i class="icon-white icon-home"></i>数据下载</a></li>
                   <li class="active"><a href="http://www.drugfuture.com/cndrug/"><i class="icon-flag"></i>数据库链接</a></li>
                   <li><a href="http://bbs.pinggu.org/thread-2172224-1-1.html"><i class="icon-folder-open"></i>常用数据分析工具</a></li>
                </ul>
