--- a/sacms/templates/sacms/data.html
+++ b/sacms/templates/sacms/data.html
@@ -27,6 +27,8 @@
   <body>
     <!-- Main jumbotron for a primary marketing message or call to action -->
            <!-- Main jumbotron for a primary marketing message or call to action -->
+    <a  href="/signup" style="float:right;padding:10px;font-size:20px">注册</a>
+    <a  href="/login" style="float:right;padding:10px;font-size:20px">登录</a>
     <div class="jumbotron">
       <div class="container">
 
@@ -88,11 +90,9 @@
                 <a class="blog-nav-item" href="{% url 'index'%}">首页</a>
                 <a class="blog-nav-item" href="{% url 'newsfeed' %}">新闻动态</a>
                 <a class="blog-nav-item" href="{% url 'meetings' %}">学术交流</a>
-                <a class="blog-nav-item" href="{% url 'groups'%}">研究团队</a>
+                <a class="blog-nav-item" href="#">通知公告</a>
                 <a class="blog-nav-item active" href="{% url 'data' %}">数据分析</a>
-                <a class="blog-nav-item" href="#">相关资源</a>
-                <a class="blog-nav-item" href="/signup" style="float:right">注册</a>
-                <a class="blog-nav-item" href="/login" style="float:right">登录</a>
+                <a class="blog-nav-item" href="{% url 'groups'%}">研究团队</a>
               </nav>
             </div>
           </div>
@@ -124,56 +124,78 @@
   <th>数据名称</th>
   <th>发布团队</th>
   <th>发布日期</th>
+  <th>操作</th>
+  <th>详情</th>
 </tr>
 <tr>
 <td>Alfreds Futterkiste</td>
 <td>Maria Anders</td>
 <td>Germany</td>
+<td><a href="#">下载</a></td>
+<td><a href="#">查看</a></td>
 </tr>
 <tr class="alt">
 <td>Berglunds snabbköp</td>
 <td>Christina Berglund</td>
 <td>Sweden</td>
+<td><a href="#">下载</a></td>
+<td><a href="#">查看</a></td>
 </tr>
 <tr>
 <td>Centro comercial Moctezuma</td>
 <td>Francisco Chang</td>
 <td>Mexico</td>
+<td><a href="#">下载</a></td>
+<td><a href="#">查看</a></td>
 </tr>
 <tr class="alt">
 <td>Ernst Handel</td>
 <td>Roland Mendel</td>
 <td>Austria</td>
+<td><a href="#">下载</a></td>
+<td><a href="#">查看</a></td>
 </tr>
 <tr>
 <td>Island Trading</td>
 <td>Helen Bennett</td>
 <td>UK</td>
+<td><a href="#">下载</a></td>
+<td><a href="#">查看</a></td>
 </tr>
 <tr class="alt">
 <td>Königlich Essen</td>
 <td>Philip Cramer</td>
 <td>Germany</td>
+<td><a href="#">下载</a></td>
+<td><a href="#">查看</a></td>
 </tr>
 <tr>
 <td>Laughing Bacchus Winecellars</td>
 <td>Yoshi Tannamuri</td>
 <td>Canada</td>
+<td><a href="#">下载</a></td>
+<td><a href="#">查看</a></td>
 </tr>
 <tr class="alt">
 <td>Magazzini Alimentari Riuniti</td>
 <td>Giovanni Rovelli</td>
 <td>Italy</td>
+<td><a href="#">下载</a></td>
+<td><a href="#">查看</a></td>
 </tr>
 <tr>
 <td>North/South</td>
 <td>Simon Crowther</td>
 <td>UK</td>
+<td><a href="#">下载</a></td>
+<td><a href="#">查看</a></td>
 </tr>
 <tr class="alt">
 <td>Paris spécialités</td>
 <td>Marie Bertrand</td>
 <td>France</td>
+<td><a href="#">下载</a></td>
+<td><a href="#">查看</a></td>
 </tr>
 </table>
 
