--- a/sacms/templates/sacms/meeting.html
+++ b/sacms/templates/sacms/meeting.html
@@ -29,6 +29,8 @@
   </head>
 
   <body>
+    <a  href="/signup" style="float:right;padding:10px;font-size:20px">注册</a>
+    <a  href="/login" style="float:right;padding:10px;font-size:20px">登录</a>
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
@@ -66,14 +68,12 @@
 		      <div class="row">
 		      	<div class="col-md-10 col-md-offset-1">
 			        <nav class="blog-nav" >
-                <a class="blog-nav-item active" href="{% url 'index'%}">首页</a>
+                <a class="blog-nav-item" href="{% url 'index'%}">首页</a>
                 <a class="blog-nav-item" href="{% url 'newsfeed' %}">新闻动态</a>
-                <a class="blog-nav-item" href="{% url 'meetings' %}">学术交流</a>
+                <a class="blog-nav-item active" href="{% url 'meetings' %}">学术交流</a>
+                <a class="blog-nav-item" href="#">通知公告</a>
+                <a class="blog-nav-item" href="{% url 'data' %}">数据相关</a>
                 <a class="blog-nav-item" href="{% url 'groups'%}">研究团队</a>
-                <a class="blog-nav-item" href="{% url 'data' %}">数据分析</a>
-                <a class="blog-nav-item" href="#">相关资源</a>
-                <a class="blog-nav-item" href="/signup" style="float:right">注册</a>
-                <a class="blog-nav-item" href="/login" style="float:right">登录</a>
 			        </nav>
 			    	</div>
 			    </div>
