--- a/sacms/templates/sacms/meeting.html
+++ b/sacms/templates/sacms/meeting.html
@@ -31,6 +31,7 @@
   <body>
     <a  href="/signup" style="float:right;padding:10px;font-size:20px">注册</a>
     <a  href="/login" style="float:right;padding:10px;font-size:20px">登录</a>
+    <a  href="{% url 'meeting_en' %}" style="float:right;padding:10px;font-size:20px">English</a>
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
