--- a/sacms/templates/sacms/newsfeed.html
+++ b/sacms/templates/sacms/newsfeed.html
@@ -26,6 +26,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <a  href="/signup" style="float:right;padding:10px;font-size:20px">注册</a>
     <a  href="/login" style="float:right;padding:10px;font-size:20px">登录</a>
+    <a  href="{% url 'newsfeed_en' %}" style="float:right;padding:10px;font-size:20px">English</a>
     <div class="jumbotron">
       <div class="container">
 
