--- a/sacms/templates/sacms/article_en.html
+++ b/sacms/templates/sacms/article_en.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>{{ article.title }}</title>
-    <link rel='icon' href='pics/logo.jpg' type='image/x-ico' /> 
+    <link rel='icon' href='pics/logo.jpg' type='image/x-ico' />
 
     <!-- 新 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="{% static 'sacms/bootstrap.min.css' %}">
@@ -20,23 +20,23 @@
 
     <link href="{% static 'sacms/index.css' %}" rel="stylesheet">
 
-    <link rel="stylesheet" href="{% static 'sacms/bootstrap.min.css' %}">  
+    <link rel="stylesheet" href="{% static 'sacms/bootstrap.min.css' %}">
     <script src="{% static 'sacms/js/jquery-2.2.3.min.js' %}"></script>
     <script src="{% static 'sacms/js/bootstrap.min.js' %}"></script>
     <link href="{% static 'sacms/index.css' %}" rel="stylesheet">
 
-	
+
   </head>
 
   <body>
-    <a  href="/signup" style="float:right;padding:10px;font-size:20px">注册</a>
-    <a  href="/login" style="float:right;padding:10px;font-size:20px">登录</a>
-    <a  href="{% url 'article_en' %}" style="float:right;padding:10px;font-size:20px">English</a>
+    <a  href="/signup" style="float:right;padding:10px;font-size:20px">registe</a>
+    <a  href="/login" style="float:right;padding:10px;font-size:20px">login</a>
+    <a  href="{% url 'article' %}" style="float:right;padding:10px;font-size:20px">中文</a>
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
 
-      	
+
       	<div class="col-md-2 logo">
           <img src="{% static 'sacms/logo.jpg' %}" height="130">
         </div>
@@ -49,7 +49,7 @@
             <div class="col-md-3 search-box">
               <div id="custom-search-input">
                 <div class="input-group col-md-12">
-                  <input type="text" class="  search-query form-control" placeholder="搜索" />
+                  <input type="text" class="  search-query form-control" placeholder="search" />
                   <span class="input-group-btn">
                     <button class="btn btn-danger" type="button">
                       <span class=" glyphicon glyphicon-search"></span>
@@ -63,23 +63,23 @@
 
         </div>
       </div>
- 
+
       <div class="container">
 	      <div class="blog-masthead">
 		      <div class="row">
 		      	<div class="col-md-10 col-md-offset-1">
 			        <nav class="blog-nav" >
-                <a class="blog-nav-item" href="{% url 'index'%}">首页</a>
-                <a class="blog-nav-item active" href="{% url 'newsfeed' %}">新闻动态</a>
-                <a class="blog-nav-item" href="{% url 'meetings' %}">学术交流</a>
-                <a class="blog-nav-item" href="#">通知公告</a>
-                <a class="blog-nav-item" href="{% url 'data' %}">数据相关</a>
-                <a class="blog-nav-item" href="{% url 'groups'%}">研究团队</a>
+                <a class="blog-nav-item" href="{% url 'index_en'%}">homepage</a>
+                <a class="blog-nav-item active" href="{% url 'newsfeed_en' %}">news</a>
+                <a class="blog-nav-item" href="{% url 'meetings_en' %}">academic</a>
+                <a class="blog-nav-item" href="#">notices</a>
+                <a class="blog-nav-item" href="{% url 'data_en' %}">data analysis</a>
+                <a class="blog-nav-item" href="{% url 'groups_en'%}">teams</a>
 			        </nav>
 			    	</div>
 			    </div>
 		    </div>
-      </div>   
+      </div>
 
     </div>
 
@@ -92,8 +92,8 @@
           <p class="project-introduction-title" style="text-align:center">{{ article.title }}</p>
              <div class="row">
                <div class="col-sm-2"></div>
-               <div class="col-sm-4"><small class="author">作者：{{ article.author }}</small></div>
-               <div class="col-sm-4"><small class="pubDate">发布日期： {{ article.published_date }}</small></div>
+               <div class="col-sm-4"><small class="author">author：{{ article.author }}</small></div>
+               <div class="col-sm-4"><small class="pubDate">release date： {{ article.published_date }}</small></div>
              </div>
              <hr>
           <p class="project-introduction-paragraph">
@@ -103,7 +103,7 @@
 				</div>
 
         <div class="col-sm-2">
-          
+
         </div>
        {% else %}
        <p>no article</p>
@@ -116,13 +116,13 @@
               <p><a href="http://zssom.sysu.edu.cn/">中山大学中山医学院</a></p>
               <p><a href="http://www.ipd.org.cn/">中国疾病预防控制中心寄生虫病预防控制所</a></p>
               <p><a href="http://life.fudan.edu.cn/ ">复旦大学生命科学学院</a></p>
-              <p><a href="http://www.ipd.org.cn/">南方医科大学公共卫生与热带医学学院</a></p>      
+              <p><a href="http://www.ipd.org.cn/">南方医科大学公共卫生与热带医学学院</a></p>
             </div>
             <div class="col-sm-5">
               <p><b>资源共享</b></p>
               <p><a href="http://www.chinaias.cn/wjPart/index.aspx ">中国外来入侵物种数据库</a></p>
               <p><a href="http://www.iucngisd.org/gisd/">全球入侵物种数据库GISD</a></p>
-              <p><a href="https://www.vectorbase.org/">人类病原体无脊椎动物媒介生物信息资源数据库（VectorBase）</a></p> 
+              <p><a href="https://www.vectorbase.org/">人类病原体无脊椎动物媒介生物信息资源数据库（VectorBase）</a></p>
             </div>
           </div>
           <div class="col-sm-3 col-sm-offset-1">
@@ -132,12 +132,12 @@
             <!-- <div class="col-sm-4"> -->
               <img src="{% static 'sacms/QRcode.png' %}" height="105">
             <!-- </div> -->
-          </div>          
+          </div>
         </div>
         <div class="col-sm-6 col-sm-offset-3">
           <p>Copyright &copy; 2016 <a href="http://www.sysu.edu.cn/2012/cn/index.htm">中山大学</a> &nbsp&nbsp&nbsp
-          联系我们：<a href="mailto:wuzhd@mail2.sysu.edu.cn">wuzhd@mail2.sysu.edu.cn</a></p> 
-          <p>地址：中国广州市中山二路74号中山大学北校区（邮政编码：510080）</p>         
+          联系我们：<a href="mailto:wuzhd@mail2.sysu.edu.cn">wuzhd@mail2.sysu.edu.cn</a></p>
+          <p>地址：中国广州市中山二路74号中山大学北校区（邮政编码：510080）</p>
         </div>
       </footer>
 
