--- a/sacms/templates/sacms/data.html
+++ b/sacms/templates/sacms/data.html
@@ -29,6 +29,7 @@
            <!-- Main jumbotron for a primary marketing message or call to action -->
     <a  href="/signup" style="float:right;padding:10px;font-size:20px">注册</a>
     <a  href="/login" style="float:right;padding:10px;font-size:20px">登录</a>
+    <a  href="{% url 'data_en' %}" style="float:right;padding:10px;font-size:20px">English</a>
     <div class="jumbotron">
       <div class="container">
 
@@ -111,7 +112,6 @@
                <ul class="nav nav-list">
                   <li class="divider"></li>
                   <li ><a href="{% url 'upload' %}"><i class="icon-white icon-home"></i>数据上传</a></li>
-                  <li ><a href="{% url 'download' %}"><i class="icon-white icon-home"></i>数据下载</a></li>
                   <li class="active"><a href="http://www.drugfuture.com/cndrug/"><i class="icon-flag"></i>数据库链接</a></li>
                   <li><a href="http://bbs.pinggu.org/thread-2172224-1-1.html"><i class="icon-folder-open"></i>常用数据分析工具</a></li>
                </ul>
@@ -123,80 +123,23 @@
 <tr>
   <th>数据名称</th>
   <th>发布团队</th>
-  <th>发布日期</th>
+  <th>团队国家</th>
   <th>操作</th>
   <th>详情</th>
 </tr>
-<tr>
-<td>Alfreds Futterkiste</td>
-<td>Maria Anders</td>
-<td>Germany</td>
-<td><a href="#">下载</a></td>
-<td><a href="#">查看</a></td>
-</tr>
-<tr class="alt">
-<td>Berglunds snabbköp</td>
-<td>Christina Berglund</td>
-<td>Sweden</td>
-<td><a href="#">下载</a></td>
-<td><a href="#">查看</a></td>
-</tr>
-<tr>
-<td>Centro comercial Moctezuma</td>
-<td>Francisco Chang</td>
-<td>Mexico</td>
-<td><a href="#">下载</a></td>
-<td><a href="#">查看</a></td>
-</tr>
-<tr class="alt">
-<td>Ernst Handel</td>
-<td>Roland Mendel</td>
-<td>Austria</td>
-<td><a href="#">下载</a></td>
-<td><a href="#">查看</a></td>
-</tr>
-<tr>
-<td>Island Trading</td>
-<td>Helen Bennett</td>
-<td>UK</td>
-<td><a href="#">下载</a></td>
-<td><a href="#">查看</a></td>
-</tr>
-<tr class="alt">
-<td>Königlich Essen</td>
-<td>Philip Cramer</td>
-<td>Germany</td>
-<td><a href="#">下载</a></td>
-<td><a href="#">查看</a></td>
-</tr>
-<tr>
-<td>Laughing Bacchus Winecellars</td>
-<td>Yoshi Tannamuri</td>
-<td>Canada</td>
-<td><a href="#">下载</a></td>
-<td><a href="#">查看</a></td>
-</tr>
-<tr class="alt">
-<td>Magazzini Alimentari Riuniti</td>
-<td>Giovanni Rovelli</td>
-<td>Italy</td>
-<td><a href="#">下载</a></td>
-<td><a href="#">查看</a></td>
-</tr>
-<tr>
-<td>North/South</td>
-<td>Simon Crowther</td>
-<td>UK</td>
-<td><a href="#">下载</a></td>
-<td><a href="#">查看</a></td>
-</tr>
-<tr class="alt">
-<td>Paris spécialités</td>
-<td>Marie Bertrand</td>
-<td>France</td>
-<td><a href="#">下载</a></td>
-<td><a href="#">查看</a></td>
-</tr>
+{% if files %}:
+  {% for f in files %}:
+  <tr class="alt">
+    <td>{{ f.name }}</td>
+    <td>{{ f.team }}</td>
+    <td>{{ f.country }}</td>
+    <td><a href="{% url 'download_file' f.name %}">下载</a></td>
+    <td><a href="{% url 'description' f.id %}">查看</a></td>
+  {% endfor %}
+  {% else %}
+    <p> no files </p>
+{% endif %}
+  </tr>
 </table>
 
 
