--- a/sacms/templates/sacms/index_en.html
+++ b/sacms/templates/sacms/index_en.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>首页</title>
-    <link rel='icon' href='pics/logo.jpg' type='image/x-ico' /> 
+    <title>index</title>
+    <link rel='icon' href='pics/logo.jpg' type='image/x-ico' />
 
 		<!-- 新 Bootstrap 核心 CSS 文件 -->
 		<link rel="stylesheet" href="{% static 'sacms/bootstrap.min.css' %}">
@@ -19,7 +19,7 @@
 		<script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 
-    <link rel="stylesheet" href="{% static 'sacms/bootstrap.min.css' %}">  
+    <link rel="stylesheet" href="{% static 'sacms/bootstrap.min.css' %}">
     <script src="{% static 'sacms/js/jquery-2.2.3.min.js' %}"></script>
     <script src="{% static 'sacms/js/bootstrap.min.js' %}"></script>
     <link href="{% static 'sacms/index.css' %}" rel="stylesheet">
@@ -29,9 +29,9 @@
 
   <body>
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <a  href="/signup" style="float:right;padding:10px;font-size:20px">注册</a>
-    <a  href="/login" style="float:right;padding:10px;font-size:20px">登录</a>
-    <a  href="{% url 'index_en' %}" style="float:right;padding:10px;font-size:20px">English</a>
+    <a  href="/signup" style="float:right;padding:10px;font-size:20px">registe</a>
+    <a  href="/login" style="float:right;padding:10px;font-size:20px">login</a>
+    <a  href="{% url 'index' %}" style="float:right;padding:10px;font-size:20px">中文</a>
     <div class="jumbotron">
       <div class="container">
       	<div class="col-md-2 logo">
@@ -46,7 +46,7 @@
             <div class="col-md-3 search-box">
               <div id="custom-search-input">
                 <div class="input-group col-md-12">
-                  <input type="text" class="  search-query form-control" placeholder="搜索" />
+                  <input type="text" class="  search-query form-control" placeholder="search" />
                   <span class="input-group-btn">
                     <button class="btn btn-danger" type="button">
                       <span class=" glyphicon glyphicon-search"></span>
@@ -59,7 +59,7 @@
           </div>
 
         </div>
-        
+
 
 
 
@@ -82,23 +82,23 @@
 			      </div>
 		      </div> -->
       </div>
- 
+
       <div class="container">
 	      <div class="blog-masthead">
 		      <div class="row">
 		      	<div class="col-md-10 col-md-offset-1">
 			        <nav class="blog-nav" >
-			          <a class="blog-nav-item active" href="{% url 'index_en'%}">首页</a>
-			          <a class="blog-nav-item" href="{% url 'newsfeed_en' %}">新闻动态</a>
-	              <a class="blog-nav-item" href="{% url 'meetings_en' %}">学术交流</a>
-                <a class="blog-nav-item" href="#">通知公告</a>
-			          <a class="blog-nav-item" href="{% url 'data_en' %}">数据相关</a>
-					      <a class="blog-nav-item" href="{% url 'groups_en' %}">研究团队</a>
+			          <a class="blog-nav-item active" href="{% url 'index_en'%}">homepage</a>
+			          <a class="blog-nav-item" href="{% url 'newsfeed_en' %}">news</a>
+	              <a class="blog-nav-item" href="{% url 'meetings_en' %}">academic</a>
+                <a class="blog-nav-item" href="#">notices</a>
+			          <a class="blog-nav-item" href="{% url 'data_en' %}">data analysis</a>
+					      <a class="blog-nav-item" href="{% url 'groups_en'%}">teams</a>
 			        </nav>
 			    	</div>
 			    </div>
 		    </div>
-      </div>   
+      </div>
 
     </div>
 
@@ -106,7 +106,7 @@
       <div class="row">
 
         <div class="col-sm-7 project-introduction">
-          <p class="project-introduction-title">项目简介</p>
+          <p class="project-introduction-title">projects</p>
           <p class="project-introduction-paragraph">
           	“保障人类健康”是我国生物安全优先考虑的战略重点之一。医学媒介生物及其相关病原体的入侵可引起如登革热、寨卡病毒病、疟疾、锥虫病、血吸虫病、广州管圆线虫病等重要热带病的流行、疫情暴发与扩散，甚至成为重大公共卫生安全事件，对人类健康和社会稳定构成极大威胁。
           </p>
@@ -136,11 +136,11 @@
 				</div>
 
         <div class="sidebar col-sm-5 ">
-          
+
           <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
               <div class="page-header">
-                合作单位
+                cooperation
               </div>
               <div class="row">
                 <div class="col-sm-3 coop1">
@@ -155,10 +155,10 @@
                 <div class="col-sm-3 coop4">
                   <img src="{% static 'sacms/4.jpg' %}" title="南方医科大学" height="110">
                 </div>
-              </div>              
+              </div>
 
             </div><!-- col-sm-11 col-sm-offset-1 -->
-          </div><!-- /row -->   
+          </div><!-- /row -->
 
         </div><!-- /.sidebar -->
       </div> <!-- /row -->
@@ -172,13 +172,13 @@
               <p><a href="http://zssom.sysu.edu.cn/">中山大学中山医学院</a></p>
               <p><a href="http://www.ipd.org.cn/">中国疾病预防控制中心寄生虫病预防控制所</a></p>
               <p><a href="http://life.fudan.edu.cn/ ">复旦大学生命科学学院</a></p>
-              <p><a href="http://www.ipd.org.cn/">南方医科大学公共卫生与热带医学学院</a></p>      
+              <p><a href="http://www.ipd.org.cn/">南方医科大学公共卫生与热带医学学院</a></p>
             </div>
             <div class="col-sm-5">
               <p><b>资源共享</b></p>
               <p><a href="http://www.chinaias.cn/wjPart/index.aspx ">中国外来入侵物种数据库</a></p>
               <p><a href="http://www.iucngisd.org/gisd/">全球入侵物种数据库GISD</a></p>
-              <p><a href="https://www.vectorbase.org/">人类病原体无脊椎动物媒介生物信息资源数据库（VectorBase）</a></p> 
+              <p><a href="https://www.vectorbase.org/">人类病原体无脊椎动物媒介生物信息资源数据库（VectorBase）</a></p>
             </div>
           </div>
           <div class="col-sm-3 col-sm-offset-1">
@@ -188,12 +188,12 @@
             <!-- <div class="col-sm-4"> -->
               <img src="{% static 'sacms/QRcode.png' %}" height="105">
             <!-- </div> -->
-          </div>          
+          </div>
         </div>
         <div class="col-sm-6 col-sm-offset-3">
           <p>Copyright &copy; 2016 <a href="http://www.sysu.edu.cn/2012/cn/index.htm">中山大学</a> &nbsp&nbsp&nbsp
-          联系我们：<a href="mailto:wuzhd@mail2.sysu.edu.cn">wuzhd@mail2.sysu.edu.cn</a></p> 
-          <p>地址：中国广州市中山二路74号中山大学北校区（邮政编码：510080）</p>         
+          联系我们：<a href="mailto:wuzhd@mail2.sysu.edu.cn">wuzhd@mail2.sysu.edu.cn</a></p>
+          <p>地址：中国广州市中山二路74号中山大学北校区（邮政编码：510080）</p>
         </div>
       </footer>
 
