--- a/sacms/templates/sacms/meetings_en.html
+++ b/sacms/templates/sacms/meetings_en.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>团队介绍</title>
+    <title>academic</title>
     <link rel='icon' href=" {% static 'sacms/logo.jpg' %}" type='image/x-ico' />
     <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
     <script src="{% static 'sacms/js/jquery-2.2.3.min.js' %}"></script>
@@ -20,20 +20,13 @@
     <link href="{% static 'sacms/index.css' %}" rel="stylesheet">
 
     <LINK href="{% static 'sacms/news_style.css' %}" rel="stylesheet" type="text/css">
-
-    
-    <link rel="stylesheet" href="{% static 'sacms/bootstrap.min.css' %}">  
-    <script src="{% static 'sacms/js/jquery-2.2.3.min.js' %}"></script>
-    <script src="{% static 'sacms/js/bootstrap.min.js' %}"></script>
-    <link href="{% static 'sacms/index.css' %}" rel="stylesheet">
-
   </head>
 
   <body>
-    <a  href="/signup" style="float:right;padding:10px;font-size:20px">注册</a>
-    <a  href="/login" style="float:right;padding:10px;font-size:20px">登录</a>
-    <a  href="{% url 'groups_en' %}" style="float:right;padding:10px;font-size:20px">English</a>
-       <!-- Main jumbotron for a primary marketing message or call to action -->
+    <a  href="/signup" style="float:right;padding:10px;font-size:20px">registe</a>
+    <a  href="/login" style="float:right;padding:10px;font-size:20px">login</a>
+    <a  href="{% url 'meetings' %}" style="float:right;padding:10px;font-size:20px">中文</a>
+    <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
 
@@ -50,7 +43,7 @@
             <div class="col-md-3 search-box">
               <div id="custom-search-input">
                 <div class="input-group col-md-12">
-                  <input type="text" class="  search-query form-control" placeholder="搜索" />
+                  <input type="text" class="  search-query form-control" placeholder="search" />
                   <span class="input-group-btn">
                     <button class="btn btn-danger" type="button">
                       <span class=" glyphicon glyphicon-search"></span>
@@ -92,12 +85,12 @@
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <nav class="blog-nav" >
-                <a class="blog-nav-item" href="{% url 'index'%}">首页</a>
-                <a class="blog-nav-item" href="{% url 'newsfeed' %}">新闻动态</a>
-                <a class="blog-nav-item" href="{% url 'meetings' %}">学术交流</a>
-                <a class="blog-nav-item" href="#">通知公告</a>
-                <a class="blog-nav-item" href="{% url 'data' %}">数据分析</a>
-                <a class="blog-nav-item active" href="{% url 'groups' %}">研究团队</a>
+                <a class="blog-nav-item" href="{% url 'index_en' %}">homepage</a>
+                <a class="blog-nav-item" href="{% url 'newsfeed_en' %}">news</a>
+                <a class="blog-nav-item active" href="{% url 'meetings_en' %}">academic</a>
+                <a class="blog-nav-item" href="#">notices</a>
+                <a class="blog-nav-item" href="{% url 'data_en' %}">data analysis</a>
+                <a class="blog-nav-item" href="{% url 'groups_en' %}">teams</a>
               </nav>
             </div>
           </div>
@@ -106,57 +99,26 @@
 
     </div>
 
-    </div>
-
     <div class="container">
-      <div class="row">
-         <div class="sidebar col-sm-2 ">
-            <div class="dropdown">
-              <button type="button" class="btn dropdown-toggle" id="dropdownMenu1" 
-                data-toggle="dropdown">
-              团队A
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-              <li role="presentation">
-                <a role="menuitem" tabindex="-1" href="#">团队B</a>
-              </li>
-              <li role="presentation">
-                <a role="menuitem" tabindex="-1" href="#">团队C</a>
-              </li>
-              <li role="presentation">
-                <a role="menuitem" tabindex="-1" href="#">团队D</a>
-              </li>
-              <li role="presentation">
-                <a role="menuitem" tabindex="-1" href="#">团队F</a>
-              </li>
-          </ul>
-        </div>
-         </div>
-          <div class="col-sm-7 w3ls-agile-left">
-          <div class="w3ls-agile-left-info">
-            <h4>人员介绍</h4>
-            <p>小明、小刚</p>
-          </div>
-          <div class="w3ls-agile-left-info">
-            <h4>研究方向</h4>
-            <p>生物制药</p>
-          </div>
-          <div class="w3ls-agile-left-info">
-            <h4>课题任务</h4>
-            <p>毁灭地球</p>
-          </div>
-          <div>
-            <h4>受项目支持发表文章</h4>
-            <ul>
-              <li>文章A <span class="date fr">2016-10-10</span></li>
-              <li>文章B</li>
-              <li>文章C</li>
-              <li>文章D</li>
-            </ul>
-          </div>
-        </div>
-      </div> <!-- /row -->
+      <div class="clearfix" id="wrapper">
+<!--div class="con_box clearfix" id="breadcrumbs">
+<div class="bcrumbs"><strong><a title="回到首页" href="http://sdcs.sysu.edu.cn/">home</a></strong>           <a>学院动态</a>
+         </div></div-->
+<div id="art_container clearfix">
+<div class="fl" id="art_main">
+<div class="cat_list">
+<ul>
+  {% if meeting_list %}
+    {% for meeting in meeting_list %}
+    <li>
+      <h2><span class="date fr"> {{ meeting.held_date }}</span> <a href="{% url 'meeting' meeting.id %}" title="{{ meeting.title }}">{{ meeting.title }}</a></h2></li>
+    </li>
+    {% endfor %}
+    {% else %}
+    <li> no meeting is available</li>
+  {% endif %}
+</div></div><!--内容-->         </div></div>
+
 
       <hr>
       <footer class="footer">
@@ -167,13 +129,13 @@
               <p><a href="http://zssom.sysu.edu.cn/">中山大学中山医学院</a></p>
               <p><a href="http://www.ipd.org.cn/">中国疾病预防控制中心寄生虫病预防控制所</a></p>
               <p><a href="http://life.fudan.edu.cn/ ">复旦大学生命科学学院</a></p>
-              <p><a href="http://www.ipd.org.cn/">南方医科大学公共卫生与热带医学学院</a></p>      
+              <p><a href="http://www.ipd.org.cn/">南方医科大学公共卫生与热带医学学院</a></p>
             </div>
             <div class="col-sm-5">
               <p><b>资源共享</b></p>
               <p><a href="http://www.chinaias.cn/wjPart/index.aspx ">中国外来入侵物种数据库</a></p>
               <p><a href="http://www.iucngisd.org/gisd/">全球入侵物种数据库GISD</a></p>
-              <p><a href="https://www.vectorbase.org/">人类病原体无脊椎动物媒介生物信息资源数据库（VectorBase）</a></p> 
+              <p><a href="https://www.vectorbase.org/">人类病原体无脊椎动物媒介生物信息资源数据库（VectorBase）</a></p>
             </div>
           </div>
           <div class="col-sm-3 col-sm-offset-1">
@@ -183,12 +145,12 @@
             <!-- <div class="col-sm-4"> -->
               <img src="{% static 'sacms/QRcode.png' %}" height="105">
             <!-- </div> -->
-          </div>          
+          </div>
         </div>
         <div class="col-sm-6 col-sm-offset-3">
           <p>Copyright &copy; 2016 <a href="http://www.sysu.edu.cn/2012/cn/index.htm">中山大学</a> &nbsp&nbsp&nbsp
-          联系我们：<a href="mailto:wuzhd@mail2.sysu.edu.cn">wuzhd@mail2.sysu.edu.cn</a></p> 
-          <p>地址：中国广州市中山二路74号中山大学北校区（邮政编码：510080）</p>         
+          联系我们：<a href="mailto:wuzhd@mail2.sysu.edu.cn">wuzhd@mail2.sysu.edu.cn</a></p>
+          <p>地址：中国广州市中山二路74号中山大学北校区（邮政编码：510080）</p>
         </div>
       </footer>
 
@@ -197,7 +159,5 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-		<script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </body>
 </html>
