--- a/sacms/templates/sacms/newsfeed.html
+++ b/sacms/templates/sacms/newsfeed.html
@@ -24,6 +24,7 @@
 
   <body>
     <!-- Main jumbotron for a primary marketing message or call to action -->
+    <a  href="/logout" style="float:right;padding:10px;font-size:20px;" id="logout">切换账户</a>
     <a  href="/signup" style="float:right;padding:10px;font-size:20px">注册</a>
     <a  href="/login" style="float:right;padding:10px;font-size:20px">登录</a>
     <a  href="{% url 'newsfeed_en' %}" style="float:right;padding:10px;font-size:20px">English</a>
