--- a/sacms/templates/sacms/article_en.html
+++ b/sacms/templates/sacms/article_en.html
@@ -29,6 +29,7 @@
   </head>
 
   <body>
+    <a  href="/logout" style="float:right;padding:10px;font-size:20px;" id="logout">change Account</a>
     <a  href="/signup" style="float:right;padding:10px;font-size:20px">registe</a>
     <a  href="/login" style="float:right;padding:10px;font-size:20px">login</a>
     <a  href="{% url 'article' %}" style="float:right;padding:10px;font-size:20px">中文</a>
