--- a/sacms/templates/sacms/data_en.html
+++ b/sacms/templates/sacms/data_en.html
@@ -27,6 +27,7 @@
   <body>
     <!-- Main jumbotron for a primary marketing message or call to action -->
            <!-- Main jumbotron for a primary marketing message or call to action -->
+    <a  href="/logout" style="float:right;padding:10px;font-size:20px;" id="logout">change Account</a>
     <a  href="/signup" style="float:right;padding:10px;font-size:20px">registe</a>
     <a  href="/login" style="float:right;padding:10px;font-size:20px">login</a>
     <a  href="{% url 'data' %}" style="float:right;padding:10px;font-size:20px">中文</a>
