--- a/sacms/templates/sacms/upload.html
+++ b/sacms/templates/sacms/upload.html
@@ -27,6 +27,7 @@
 
   </head>
   <body>
+    <a  href="/logout" style="float:right;padding:10px;font-size:20px;" id="logout">切换账户</a>
     <a  href="/signup" style="float:right;padding:10px;font-size:20px">注册</a>
     <a  href="/login" style="float:right;padding:10px;font-size:20px">登录</a>
     <a  href="{% url 'upload_en' %}" style="float:right;padding:10px;font-size:20px">English</a>
